# SIGRENE

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/database/: mongodb.py
app/models/: schemas.py
app/services/: auth.py  calculations.py
app/services/email/: __init__.py  base.py  console.py  factory.py  resend.py  templates.py
frontend/: analisis-competicion.html  composicion-corporal.html  control-fisiologico.html  dashboard.html  entrenamiento.html  index.html  nadadores.html  package-lock.json  package.json  recuperar.html  registro.html  vite.config.ts
frontend/css/: styles.css
frontend/js/: api.js  auth.js  charts.js
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: AppShell.tsx  AuthShell.tsx  CookieBanner.tsx  LanguageSwitcher.tsx  Logo.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/src/lib/: api.ts  auth.tsx  i18n.tsx
frontend/src/routes/: __root.tsx  app.admin.backups.tsx  app.admin.coaches.tsx  app.admin.index.tsx  app.admin.invitations.tsx  app.admin.pending.tsx  app.admin.preview.tsx  app.admin.register-trainer.tsx  app.admin.settings.tsx  app.admin.tsx  app.admin.users.tsx  app.coach.index.tsx  app.coach.invitations.tsx  app.coach.swimmers.tsx  app.coach.tsx  app.coach.wellness.tsx  app.director.groups.tsx  app.director.index.tsx  app.director.invitations.tsx  app.director.reports.tsx  contact.tsx  (+15 more)
frontend_vercel/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend_vercel/src/: App.tsx  styles.css
notebooks/: 1.0-swimming_metrics.ipynb
(+19 files in other folders)
